# ejabberd_couchdb

./: .gitignore  Makefile.am  README.md  acinclude.m4  bootstrap.sh  configure.ac
src/: auth_couchdb_test.erl  ejabberd_auth_couchdb.erl  ejabberd_couch.erl
